===============================================================
Tag name:  rtm1_0_48
Originator(s): jedwards
Date: Apr 25, 2015
One-line Summary: readnamelist on mastertask only

M   src/riverroute/RtmMod.F90

===============================================================
Tag name:  rtm1_0_47
Originator(s): erik
Date: Mar 18, 2015
One-line Summary: Add cimetest directory that was under clm before

A       cimetest
A       cimetest/testlist_rtm.xml
A       cimetest/testmods_dirs
A  +    cimetest/testmods_dirs/rtm
	
===============================================================
Tag name:  rtm1_0_46
Originator(s): mvertens
Date: Mar 10, 2015
One-line Summary: fixes for new scripts directory structure
	
M       bld/build-namelist
	
===============================================================
Tag name:  rtm1_0_45
Originator(s): mvertens
Date: Mar 10, 2015
One-line Summary: more changes needed for scripts/testing refactor

This is required for cesm1_3_beta18
	
M       bld/build-namelist
	
===============================================================
Tag name:  rtm1_0_44
Originator(s): mvertens
Date: Feb 21, 2015
One-line Summary: more changes needed for scripts/testing refactor

This is required for cesm1_3_beta18
	
M       bld/build-namelist
M       bld/rtm.buildlib
M       bld/rtm.buildnml
	
===============================================================
Tag name:  rtm1_0_43
Originator(s): mvertens
Date: Feb 21, 2015
One-line Summary: changes needed for scripts/testing refactor

This is required for cesm1_3_beta18
	
M       bld/build-namelist
D       bld/rof.cpl7.template
D       bld/rtm.buildexe.csh
A  +    bld/rtm.buildlib
A  +    bld/rtm.buildnml
D       bld/rtm.buildnml.csh
D       bld/rtm.cpl7.template
	
M       src/riverroute/RtmMod.F90
	- very minor change for output 
===============================================================
Tag name:  rtm1_0_41
Originator(s): jedwards
Date: Nov 30, 2014
One-line Summary: PIO2 Compatibility changes 
